--- a/requirements.txt
+++ b/requirements.txt
@@ -2,24 +2,25 @@ certifi==2021.10.8
 charset-normalizer==2.0.12
 dnspython==2.2.0
 docopt==0.6.2
-docutils==0.17.1
+docutils==0.18.1
 fett==0.3.2
 ffmpeg-python==0.2.0
 future==0.18.2
 idna==3.3
+imageio-ffmpeg==0.4.5
 networkx==2.6.3
-pkg_resources==0.0.0
 pyaes==1.6.1
-pymongo==3.12.3
+pymongo==4.0.1
 Pyrogram==1.4.7
 PySocks==1.7.1
-python-jsonrpc-server==0.3.4
-PyYAML==5.4.1
+python-jsonrpc-server==0.4.0
+PyYAML==6.0
 requests==2.27.1
 rstcheck==3.3.1
 snooty-lextudio==1.11.6
+TgCrypto==1.2.3
 toml==0.10.2
 typing_extensions==4.1.1
-ujson==1.35
+ujson==5.1.0
 urllib3==1.26.8
-watchdog==1.0.2
+watchdog==2.1.6
